// Protocol buffer that specifies the options that can be used in other protos
// for controlling the generation of YARA modules.

syntax = "proto3";

package yara;

import "google/protobuf/descriptor.proto";

message ModuleOptions {
  string name = 1;
  string root_message = 2;
  string rust_module = 3;
}

message FieldOptions {
  string name = 1;
  bool ignore = 2;
}

message MessageOptions {
  string name = 1;
}

message EnumOptions {
  string name = 1;
  bool inline = 2;
}

message EnumValueOptions {
  int64 i64 = 1;
}

extend google.protobuf.FileOptions {
  ModuleOptions module_options = 51503;
}

extend google.protobuf.FieldOptions {
  FieldOptions field_options = 51504;
}

extend google.protobuf.MessageOptions {
  MessageOptions message_options = 51505;
}

extend google.protobuf.EnumOptions {
  EnumOptions enum_options = 51506;
}

extend google.protobuf.EnumValueOptions {
  EnumValueOptions enum_value = 51507;
}